# liesel_project

./: main.py  pyproject.toml
models/: HMNL_21_12.ipynb
test_notebooks/: HMNL_21_12_large_data_test.ipynb  InverseWishart_jax_tfp_v1.ipynb  logprob_results.npz
