[project]
name = "liesel-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "graphviz>=0.21",
    "ipykernel>=7.1.0",
    "jax>=0.6.2",
    "jupyter>=1.1.1",
    "liesel>=0.4.1",
    "notebook>=7.4.7",
    "numpyro>=0.19.0",
    "plotnine>=0.15.1",
    "pykernel>=0.1.6",
    "pymc>=5.26.1",
    "tensorflow>=2.20.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "jupyter>=1.1.1",
]
